# elm-mcp

./: .gitignore  BOB.md  CLAUDE.md  LIFECYCLE.md  README.md  change_impact.py  compliance_packet.py  compliance_report.py  create_engine.py  doors_client.py  doors_mcp_server.py  elm_docs.py  html_report.py  impact_report.py  install.ps1  install.sh  manifest.json  mermaid_render.py  modes_install.py  pyproject.toml  query_engine.py  req_quality.py  requirements-semantic.txt  requirements.txt  selftest.py  semantic.py  setup.py  traceability_gaps.py  xlsx_export.py
compliance/: iec_62304.yaml  nist_800_53.yaml
docs/: QUERY_ARCHITECTURE.md
labs/: README.md
labs/lab-00-prerequisites/: README.md
labs/lab-01-install-connect/: README.md
labs/lab-01-install-mcp/: README.md
labs/lab-02-connect-to-elm/: README.md
labs/lab-02-talk-to-your-data/: README.md
labs/lab-03-find-anything/: README.md
labs/lab-03-install-modes/: README.md
labs/lab-04-concierge-routing/: README.md
labs/lab-04-write-requirements/: README.md
labs/lab-05-create-work-items/: README.md
labs/lab-05-read-requirements/: README.md
labs/lab-06-connect-the-chain/: README.md
labs/lab-06-plan-push/: README.md
labs/lab-07-find-the-gaps/: README.md
labs/lab-08-change-impact/: README.md
labs/lab-09-compliance/: README.md
labs/lab-10-capstone/: README.md
modes/: README.md  custom_modes.yaml
modes/rules/rules-compliance-auditor/: 01-playbook.md
modes/rules/rules-concierge/: 01-playbook.md
modes/rules/rules-impact-analyst/: 01-playbook.md
modes/rules/rules-requirements-planner/: 01-playbook.md
modes/rules/rules-requirements-pusher/: 01-playbook.md
probe/: 01_auth_and_projects.py  02_inspect_module.py  02b_find_module_project.py  03_inspect_binding_and_factory.py  04_live_module_test.py  05_diag_create_module_403.py  06_module_create_with_parent.py  07_check_sandbox_writes.py  08_find_writable_projects.py  09_diag_400_put.py  10_diag_400_xml_proper.py  11_diag_put_roundtrip.py  12_diag_minimal_edit.py  13_create_in_module.py  14_diag_strip_description.py  15_lifecycle_test.py  16_module_bind_final.py  17_richtext_table_image.py  22_ewm_link_variants.py  23_full_workflow_sim.py  MODULE_BINDING_FINDINGS.md  OSLC_GAPS.md  SCM_RESEARCH.md  oslc_deep_probes.py  oslc_endpoint_probes.py  oslc_final_probes.py  oslc_services_inventory.py  scm_01_rootservices_and_catalog.py  scm_02_catalog_and_providers.py  scm_03_proprietary_endpoints.py  scm_04_trs_resources.py  scm_05_code_reviews.py
